--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ img {
   padding: 8px 16px;
   font-weight: bold;
 }
-#page-nation {
+#pagenation {
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
 }
-.page-nation-item {
-  margin-left: 16px;
+.pagenation-item {
+  margin-right: 16px;
   width: 16px;
   height: 16px;
   background: #dedede;
