送り動作実装(コード削減)

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ img {
   background: #dedede;
   border-radius: 50%;
 }
-.page-nation-item.active {
+.pagenation-item.active {
   background: #FF6565;
 }
 
