--- a/slider_style.css
+++ b/slider_style.css
@@ -22,6 +22,7 @@ img {
   background: #dedede;
   border-radius: 8px;
 }
+
 #slider-wrap {
   position: absolute;
   top: 24px;
@@ -33,6 +34,7 @@ img {
   border-radius: 8px;
   overflow: hidden;
 }
+
 .slider-item {
   width: 100%;
   height: 100%;
@@ -44,11 +46,13 @@ img {
   padding: 8px 16px;
   font-weight: bold;
 }
+
 #pagenation {
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
 }
+
 .pagenation-item {
   margin-right: 16px;
   width: 16px;
@@ -56,10 +60,12 @@ img {
   background: #dedede;
   border-radius: 50%;
 }
+
 .pagenation-item.active {
   background: #FF6565;
 }
 
 .btn-wrap {
+  margin-top: 16px;
   text-align: center;
 }
